--- a/index.html
+++ b/index.html
@@ -13,8 +13,24 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 
   <style>
-    body { font-family: sans-serif; background: #f0f2f5; margin: 0; padding: 0; }
-    .app { max-width: 500px; margin: 0 auto; background: #fff; min-height: 100vh; padding: 20px; box-sizing: border-box; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    body {
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(180deg, #121826, #1b2336);
+}
+
+/* Container principal */
+.app {
+  max-width: 500px;
+  margin: 0 auto;
+  min-height: 100vh;
+  padding: 20px;
+  box-sizing: border-box;
+  background: #f9fafb;
+  border-radius: 16px 16px 0 0;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+}
     h2 { text-align: center; color: #333; border-bottom: 2px solid #eee; padding-bottom: 10px; }
     .linha { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; gap: 10px; }
     label { flex: 1; font-size: 14px; font-weight: bold; }
@@ -29,6 +45,28 @@
     .btn-block { width: 100%; margin-top: 10px; }
     .btn-save { background: #28a745; }
     .btn-danger { background: #dc3545; }
+	h2 {
+  color: #1f2933;
+}
+
+.menu button {
+  background: linear-gradient(135deg, #2563eb, #1e40af);
+  border-radius: 12px;
+  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+}
+
+.menu button:active {
+  transform: scale(0.98);
+}
+
+.tela {
+  animation: fadeIn 0.25s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(4px); }
+  to { opacity: 1; transform: translateY(0); }
+}
   </style>
 </head>
 <body>
