--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   min-height: 100vh;
   padding: 20px;
   box-sizing: border-box;
-  background: #f9fafb;
+  background: #111827;
   border-radius: 16px 16px 0 0;
   box-shadow: 0 10px 30px rgba(0,0,0,0.4);
 }
@@ -182,4 +182,5 @@
 <script src="./app.js"></script>
 </body>
 </html>
+
 
