--- a/index.html
+++ b/index.html
@@ -67,6 +67,31 @@
   from { opacity: 0; transform: translateY(4px); }
   to { opacity: 1; transform: translateY(0); }
 }
+
+/* Texto padrão claro */
+.app, 
+.app label, 
+.app h2, 
+.app p {
+  color: #f9fafb;
+}
+
+/* Inputs claros sobre fundo escuro */
+input {
+  background: #f3f4f6;
+  color: #111827;
+}
+
+/* Campos readonly */
+.readonly {
+  background: #e5e7eb;
+  color: #111827;
+}
+
+/* Cards internos */
+section > div {
+  background: #1f2937 !important;
+}
   </style>
 </head>
 <body>
@@ -182,5 +207,6 @@
 <script src="./app.js"></script>
 </body>
 </html>
+
 
 
