--- a/index.html
+++ b/index.html
@@ -92,6 +92,73 @@ input {
 section > div {
   background: #1f2937 !important;
 }
+
+/* ===== MENU V5 - CARDS GRANDES (VALIDADO) ===== */
+
+#menu {
+  background: linear-gradient(180deg, #0f172a, #020617);
+  min-height: 100vh;
+  padding-bottom: 40px;
+}
+
+#menu h2 {
+  color: #ffffff;
+  font-size: 26px;
+  text-align: center;
+  margin-bottom: 25px;
+  border-bottom: 1px solid rgba(255,255,255,0.15);
+  padding-bottom: 15px;
+}
+
+.card-menu {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+
+  background: #1e293b;
+  border-radius: 18px;
+  padding: 22px 20px;
+  margin-bottom: 18px;
+
+  box-shadow: 0 8px 20px rgba(0,0,0,0.35);
+  cursor: pointer;
+}
+
+.card-menu:active {
+  transform: scale(0.98);
+}
+
+.card-icon {
+  width: 64px;
+  height: 64px;
+  border-radius: 14px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 32px;
+  background: #334155;
+  flex-shrink: 0;
+}
+
+.card-text {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-title {
+  font-size: 20px;
+  font-weight: bold;
+  color: #ffffff;
+  margin-bottom: 6px;
+}
+
+.card-desc {
+  font-size: 16px;
+  color: #cbd5f5;
+  line-height: 1.4;
+}
   </style>
 </head>
 <body>
@@ -260,6 +327,7 @@ section > div {
 <script src="./app.js"></script>
 </body>
 </html>
+
 
 
 
