--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Controle Diário V5</title>
+	<link rel="stylesheet" href="v5.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="manifest" href="./manifest.json">
   <meta name="theme-color" content="#000000">
@@ -327,6 +328,7 @@ section > div {
 <script src="./app.js"></script>
 </body>
 </html>
+
 
 
 
