--- a/index.html
+++ b/index.html
@@ -263,19 +263,58 @@ section > div {
   </div>
 </section>
 
-  <section id="custos" class="tela">
-    <h2>⛽ Custos e Ganhos</h2>
-    <div class="linha"><label>Abastecimento R$</label><input id="valorAbastecimento" type="number" step="0.01"><button onclick="adicionarAbastecimento()">+</button></div>
-    <div class="linha"><label>Total Gasto ⛽</label><input id="totalAbastecido" class="readonly" type="text" readonly value="0.00"></div>
+ <section id="custos" class="tela">
+  <h2>Custos e Ganhos</h2>
+
+  <div class="card">
+
+    <div class="linha">
+      <label>Abastecimento (R$)</label>
+      <input id="valorAbastecimento" type="number" step="0.01">
+      <button class="btn-icon" onclick="adicionarAbastecimento()">＋</button>
+    </div>
+
+    <div class="linha">
+      <label>Total Abastecido</label>
+      <input id="totalAbastecido" class="readonly" readonly>
+    </div>
+
     <hr>
-    <div class="linha"><label>Outros Custos R$</label><input id="valorOutrosCustos" type="number" step="0.01"><button onclick="adicionarOutrosCustos()">+</button></div>
-    <div class="linha"><label>Total Outros</label><input id="totalOutrosCustos" class="readonly" type="text" readonly value="0.00"></div>
-    <div class="linha"><label>TOTAL CUSTOS</label><input id="totalCustos" class="readonly" type="text" readonly style="font-weight:bold"></div>
+
+    <div class="linha">
+      <label>Outros Custos (R$)</label>
+      <input id="valorOutrosCustos" type="number" step="0.01">
+      <button class="btn-icon" onclick="adicionarOutrosCustos()">＋</button>
+    </div>
+
+    <div class="linha">
+      <label>Total Outros</label>
+      <input id="totalOutrosCustos" class="readonly" readonly>
+    </div>
+
+    <div class="linha destaque">
+      <label>Total de Custos</label>
+      <input id="totalCustos" class="readonly" readonly>
+    </div>
+
     <hr>
-    <div class="linha"><label>VALOR APURADO R$</label><input id="apurado" type="number" step="0.01" placeholder="Ganhos totais"></div>
-    <button class="btn-block btn-save" onclick="inserirApurado()">💾 Salvar Dados</button>
-    <div class="nav"><button onclick="irPara('menu')">⬅ Menu</button><button onclick="irPara('fimTurno')">Finalizar ➡</button></div>
-  </section>
+
+    <div class="linha">
+      <label>Valor Apurado (R$)</label>
+      <input id="apurado" type="number" step="0.01">
+    </div>
+
+    <button class="btn btn-primary" onclick="inserirApurado()">
+      💾 Salvar Dados
+    </button>
+
+  </div>
+
+  <div class="nav">
+    <button class="btn" onclick="irPara('menu')">⬅ Menu</button>
+    <button class="btn btn-primary" onclick="irPara('fimTurno')">Próximo ➡</button>
+  </div>
+</section>
 
   <section id="fimTurno" class="tela">
     <h2>⏹ Fim de Turno</h2>
@@ -348,6 +387,7 @@ section > div {
 <script src="./app.js"></script>
 </body>
 </html>
+
 
 
 
