--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="app">
 
   <!-- ================= MENU PRINCIPAL ================= -->
-  <!--<section id="menu" class="tela ativa menu">
+  <section id="menu" class="tela ativa menu">
     <h2>👋 Bem-vindo</h2>
 
     <button onclick="irPara('inicioTurno')">
@@ -48,67 +48,8 @@
       <span class="icone">📚</span> Histórico Geral
     </button>
   </section>
--->
 
-<!-- ================= MENU PRINCIPAL (DASHBOARD) ================= -->
-<section id="menu" class="tela ativa">
-  <div class="header-menu">
-    <h1>🚗 Controle Diário</h1>
-    <p id="dataAtual">--/--/----</p>
-  </div>
 
-  <div class="grid-menu">
-    <!-- Botão de Ação Principal: Iniciar -->
-    <button class="btn-menu btn-save" onclick="irPara('inicioTurno')">
-      <span class="icone-g">▶️</span>
-      <div class="texto-menu">
-        <strong>Iniciar Turno</strong>
-        <span>Começar registro de hoje</span>
-      </div>
-    </button>
-
-    <!-- Custos e Ganhos -->
-    <button class="btn-menu" onclick="irPara('custos')">
-      <span class="icone-g">⛽</span>
-      <div class="texto-menu">
-        <strong>Custos e Ganhos</strong>
-        <span>Lançar abastecimento/valor</span>
-      </div>
-    </button>
-
-    <!-- Resumo do Dia -->
-    <button class="btn-menu" onclick="irPara('resumoDia')">
-      <span class="icone-g">📅</span>
-      <div class="texto-menu">
-        <strong>Resumo do Dia</strong>
-        <span>Ver ganhos e KM rodados</span>
-      </div>
-    </button>
-
-    <!-- Metas Mensais -->
-    <button class="btn-menu" onclick="irPara('metasMensais')">
-      <span class="icone-g">📈</span>
-      <div class="texto-menu">
-        <strong>Metas Mensais</strong>
-        <span>Progresso e Custos Fixos</span>
-      </div>
-    </button>
-
-    <!-- Histórico Geral -->
-    <button class="btn-menu" onclick="irPara('historicoGeral')">
-      <span class="icone-g">📚</span>
-      <div class="texto-menu">
-        <strong>Histórico Geral</strong>
-        <span>Relatórios e Exportação</span>
-      </div>
-    </button>
-  </div>
-
-  <div class="footer-status">
-    <small>Versão 5.0 - Sistema Offline Ativo</small>
-  </div>
-</section>
-  
     <!-- ================= INÍCIO DE TURNO ================= -->
   <section id="inicioTurno" class="tela">
     <h2>▶️ Início de Turno</h2>
@@ -320,6 +261,7 @@
 <script src="./app.js"></script>
 </body>
 </html>
+
 
 
 
