--- a/index.html
+++ b/index.html
@@ -79,8 +79,11 @@
   <!-- ================= CUSTOS ================= -->
   <section id="custos" class="tela">
     <h2>⛽ Custos e Ganhos</h2>
+    <div id="status-salvamento" style="text-align: center; height: 20px; color: #2ecc71; font-weight: bold; opacity: 0; transition: opacity 0.3s;">
+  ✅ Registrado com sucesso!
+</div>
 
-   <div class="bloco-custo">
+  <div class="bloco-custo">
   <label class="label-grande">⛽ Custos com Combustível</label>
 
   <input 
@@ -261,6 +264,7 @@
 <script src="./app.js"></script>
 </body>
 </html>
+
 
 
 
