--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!-- Só permite custos/fim se HOUVER turno ativo -->
     <button id="btnIrCustos" class="btn-menu" onclick="irPara('custos')" disabled>
       <span class="icone-g">⛽</span>
-      <div class="texto-menu"><strong>Custos e Ganhos</strong><span>Lançar valores</span></div>
+      <div class="texto-menu"><strong>Custos</strong><span>Lançar valores</span></div>
     </button>
 
     <button id="btnIrFim" class="btn-menu" onclick="irPara('fimTurno')" disabled>
@@ -310,6 +310,7 @@
 <script src="./app.js"></script>
 </body>
 </html>
+
 
 
 
