--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
   <input 
     id="valorAbastecimento"
     type="number"
+    inputmode="decimal"
     step="0.01"
     placeholder="Digite o valor abastecido"
     class="input-grande"
@@ -159,6 +160,7 @@
   <input 
     id="valorOutrosCustos"
     type="number"
+    inputmode="decimal"
     step="0.01"
     placeholder="Digite o valor do custo"
     class="input-grande"
@@ -209,7 +211,7 @@
   <!-- CAMPO MOVIDO PARA CÁ -->
   <div class="linha" style="margin-top: 20px;">
     <label>Valor Apurado R$</label>
-    <input id="apurado" type="number" step="0.01" placeholder="0.00">
+    <input id="apurado" type="number" inputmode="decimal" step="0.01" placeholder="0.00">
   </div>
 
   <button class="btn-danger" onclick="confirmarFimTurno()" style="margin-top: 20px;">
@@ -244,7 +246,7 @@
   <div class="box">
     <div class="linha">
       <label>Valor da Meta Mensal</label>
-      <input id="valorMetaMensal" type="number" step="0.01" placeholder="Ex: 5000.00">
+      <input id="valorMetaMensal" type="number" inputmode="decimal" step="0.01" placeholder="Ex: 5000.00">
     </div>
     
     <button class="btn-save" onclick="atualizarMetaMensal()">
@@ -267,7 +269,7 @@
 
     <div class="linha">
       <label>Valor R$</label>
-      <input id="valorCustoFixo" type="number" step="0.01">
+      <input id="valorCustoFixo" type="number" inputmode="decimal" step="0.01">
     </div>
 
     <button class="btn-confirmar" onclick="inserirCustoFixo()">
@@ -310,6 +312,7 @@
 <script src="./app.js"></script>
 </body>
 </html>
+
 
 
 
